@@ -1,0 +1,34 @@
+# Requires (command line or in  .bashrc):
+#   module load cmake
+# 
+# Compared to the PGI build, I executed:
+#   module swap PrgEnv-pgi PrgEnv-gnu
+#   module load netcdf (on 8/2012, gives netcdf-hdf5parallel/4.2.0, hdf5/1.8.8 )
+#
+# cmake configuration script that works on jaguar with GCC 
+# This script needs to be run from a subdirectory (e.g. build-gnu)
+# of the main seacism repository (reflected in the several 
+# instances of # ".." below).
+#
+# After this executes, do:
+#   make -j 8
+#   cp example-drivers/simple_glide/src/sgcmake .
+
+rm ./CMakeCache.txt
+
+echo
+echo "Doing CMake Configuration step"
+
+cmake \
+  -D GLIMMER_TRILINOS_DIR=/ccs/proj/cli054/trilinos-10.12/AUG_GNU_BUILD/install \
+  -D GLIMMER_NETCDF_DIR=$NETCDF_DIR \
+  -D CMAKE_VERBOSE_MAKEFILE:BOOL=OFF \
+  -D GLIMMER_GPTL_DIR=/tmp/proj/cli054/libgptl_gnu \
+  -D GLIMMER_Fortran_FLAGS="-ffree-line-length-none" \
+ ..
+
+# Note: last argument above  ".."  is path to top seacism directory 
+
+# If you dont depend on  netcdff AND netcdf, but just netcdf, use this line
+#   -D GLIMMER_NETCDF_LIBS="netcdf" \
+#
