@@ -1,0 +1,40 @@
+.SUFFIXES:
+.SUFFIXES: .F .F90 .c .o
+
+CPPDEF    := -DLINUX -DFORTRANUNDERSCORE -DSPMD  -DHAVE_NANOTIME -DBIT64 -DHAVE_COMM_F2C
+
+FC := ftn -fopenmp
+CC := cc -fopenmp
+# FFLAGS    := -i4 -Mdalign -Mextend -byteswapio $(CPPDEF)
+FFLAGS    := $(CPPDEF)
+CFLAGS    := $(CPPDEF)
+# FREEFLAGS := -Mfree
+FREEFLAGS := 
+
+.F90.o:
+	$(FC) -c $(FREEFLAGS) $(FFLAGS) -I. $<
+.F.o:
+	$(FC) -c $(FFLAGS) -I. $<
+.c.o:
+	$(CC) -c $(CFLAGS) -I. $<
+
+#------------------------------------------------------------------------
+# Targets/rules that depend on architecture specific variables.
+#------------------------------------------------------------------------
+
+OBJS := GPTLget_memusage.o GPTLprint_memusage.o GPTLutil.o f_wrappers.o \
+        gptl.o gptl_papi.o perf_utils.o perf_mod.o
+RM   := rm
+AR   := ar
+ARFLAGS := -rc
+RANLIB  := ranlib
+
+all: libgptl.a
+
+libgptl.a : $(OBJS)
+	$(AR) $(ARFLAGS) $@ $(OBJS)
+	$(RANLIB) $@
+
+clean:
+	$(RM) -f *.o *.mod *.a
+
